Make sure text in general dropdown menu outside of block is still black even in high contrast dark mode

--- a/style/blockly.css
+++ b/style/blockly.css
@@ -57,6 +57,9 @@ body[data-theme="dark-contrast"] {
   .blocklyMenuItemContent {
     color: white !important;
   }
+  .blocklyWidgetDiv .blocklyMenuItemContent {
+    color: black !important;
+  }
   .blocklyToolboxCategoryLabel {
     color: white !important;
   }
